<resources>
    <string name="app_name">Shampa\'s Kitchen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="sub_category_yes">Yes</string>
    <string name="sub_category_no">No</string>
    <string name="txt_active">Active</string>
    <string name="demo_txt_large">\t\t\tPutant commodo deserunt quo ex, mei in placerat conceptam consetetur, vis eu ludus facilisi consequuntur. No labore deleniti nominati quo, has ut esse persius, vim in dolorum vivendo. Ei malis soluta mandamus vim, ei sed propriae albucius, maiorum efficiendi nam at. Sea id choro insolens periculis, sea aliquam vituperatoribus ea.</string>
    <string name="see_video"><u>See Video</u></string>
    <string name="submit_review"><u>Write a review</u></string>
    <string name="youtube_key">AIzaSyBGQtOus_G3iVF4YXQssAGm0Yo7-0Rfio8</string>

    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="choose_type">Choose Dish Type:-</string>
    <string name="rationale_doc_picker">We need this permission to read file from device.</string>
    <string name="rate_and_review"><u>Rate &amp; Review</u></string>
    <string name="post_review">Post Review</string>
    <string name="search_hint">Search</string>
</resources>
