<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_8sdp">

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/_5sdp"
                android:text="Title"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:id="@+id/title_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_tv"
                android:padding="@dimen/_5sdp"
                android:text="@string/demo_txt_large"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/rate_review_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_details"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/rate_and_review"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/no_review_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rate_review_tv"
                android:layout_marginTop="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:text="No Review yet."
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_10sdp"
                android:textStyle="italic"
                android:visibility="gone"
                tools:visibility="visible" />

            <com.shampaskitchen.custom.FixedHeightListView
                android:id="@+id/review_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/no_review_tv"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:scrollbars="none" />

            <LinearLayout
                android:id="@+id/ll_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/review_list"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp"
                android:visibility="visible"
                tools:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/post_review"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatRatingBar
                    android:id="@+id/ratingbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:max="5"
                    android:scaleX="0.5"
                    android:scaleY="0.5"
                    android:transformPivotX="0dp"
                    android:transformPivotY="0dp" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/rater_name_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_minus10sdp"
                    android:background="@color/edt_bg"
                    android:hint="Name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:textSize="@dimen/_10sdp" />


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/rater_desc_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/edt_bg"
                    android:hint="Write your comments"
                    android:imeOptions="actionDone"
                    android:inputType="textCapSentences|textMultiLine"
                    android:minLines="4"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:textSize="@dimen/_10sdp" />


                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/submit_btn_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/submit_btn_bg"
                    android:paddingBottom="@dimen/_5sdp"
                    android:paddingLeft="@dimen/_15sdp"
                    android:paddingRight="@dimen/_15sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:text="Submit"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />


            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
