<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_5sdp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_10sdp">



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/share_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/ic_menu_share"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:padding="@dimen/_10sdp"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/menu_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingRight="@dimen/_5sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/menu_item_iv"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp"
                    android:layout_below="@+id/menu_title_tv"
                    android:layout_margin="@dimen/_2sdp"
                    app:srcCompat="@drawable/food_sample"/>

                <com.uncopt.android.widget.text.justify.JustifiedTextView
                    android:id="@+id/menu_desc_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/menu_item_iv"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/demo_txt_large"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_11sdp" />

                <android.support.v7.widget.LinearLayoutCompat
                    android:id="@+id/ll_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/menu_desc_tv"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/prepare_tym_txtv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:padding="@dimen/_5sdp"
                        android:text="Prepare in: 20Mins"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_12sdp" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/serve_to_txtv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:padding="@dimen/_5sdp"
                        android:text="Serve to: 7 People"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_12sdp" />
                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat
                    android:id="@+id/ll_second_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_main"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ingredients:"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />

                    <com.uncopt.android.widget.text.justify.JustifiedTextView
                        android:id="@+id/ingredients_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/demo_txt_large"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_11sdp" />


                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/menu_banner"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_margin="@dimen/_3sdp"
                        android:scaleType="fitXY" />

                    <android.support.v7.widget.LinearLayoutCompat
                        android:id="@+id/ll_recipe_header_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_weight="1"
                            android:text="Method:"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/hindi_tv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_weight="0.3"
                            android:background="@color/colorPrimary"
                            android:gravity="end"
                            android:padding="@dimen/_5sdp"
                            android:text="Bengali "
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="italic" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/eng_tv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_weight="0.30"
                            android:background="@color/colorPrimaryDark"
                            android:gravity="end"
                            android:padding="@dimen/_5sdp"
                            android:text="English"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="italic" />
                    </android.support.v7.widget.LinearLayoutCompat>

                    <com.uncopt.android.widget.text.justify.JustifiedTextView
                        android:id="@+id/recipe_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/demo_txt_large"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_11sdp" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/see_vdo_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/_5sdp"
                        android:paddingRight="@dimen/_5sdp"
                        android:paddingTop="@dimen/_5sdp"
                        android:text="@string/see_video"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold|italic" />

                </android.support.v7.widget.LinearLayoutCompat>


                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/submit_review_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_second_main"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/submit_review"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold|italic" />

                <LinearLayout
                    android:id="@+id/ll_review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/submit_review_tv"
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp"
                    android:visibility="visible"
                    tools:visibility="visible">

                    <android.support.v7.widget.AppCompatRatingBar
                        android:id="@+id/ratingbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:max="5"
                        android:scaleX="0.5"
                        android:scaleY="0.5"
                        android:transformPivotX="0dp"
                        android:transformPivotY="0dp" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/rater_name_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_minus10sdp"
                        android:background="@color/edt_bg"
                        android:hint="Name"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:lines="1"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black"
                        android:textSize="@dimen/_10sdp" />


                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/rater_desc_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/edt_bg"
                        android:hint="Write your comments"
                        android:imeOptions="actionDone"
                        android:inputType="textCapSentences|textMultiLine"
                        android:minLines="4"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black"
                        android:textSize="@dimen/_10sdp" />


                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/submit_btn_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/submit_btn_bg"
                        android:paddingBottom="@dimen/_5sdp"
                        android:paddingLeft="@dimen/_15sdp"
                        android:paddingRight="@dimen/_15sdp"
                        android:paddingTop="@dimen/_5sdp"
                        android:text="Submit"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/rate_and_review"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/no_review_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:padding="@dimen/_5sdp"
                        android:text="No Review yet."
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="italic"
                        android:visibility="gone"
                        tools:visibility="visible" />

                </LinearLayout>

                <com.shampaskitchen.custom.FixedHeightListView
                    android:id="@+id/review_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_review"
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:scrollbars="none" />
            </RelativeLayout>
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>